# candid-surfer

./: .gitignore  CLAUDE.md  CNAME  README.md  index.html
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d98bb0db7e33_initial_schema.py
backend/app/: auth.py  db.py  deps.py  main.py  models.py  r2.py  schemas.py
backend/app/routers/: purchases.py  sessions.py  spots.py  uploads.py  webhooks.py
backend/app/services/: clip_status.py  stream.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_clip_status.py  test_stream.py
docs/: api_flows.md  architecture.md  database.md  roadmap.md
docs/agents/: domain.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/purchase/cancel/: page.tsx
frontend/src/app/purchase/success/: page.tsx
frontend/src/app/purchases/: page.tsx
frontend/src/app/sessions/new/: page.tsx
frontend/src/components/: AuthProvider.tsx  LoginForm.tsx  Map.tsx  Navbar.tsx  Player.tsx  SessionFeed.tsx  SpotMap.tsx
frontend/src/hooks/: useClipStatus.ts  useSpotsByBounds.ts  useVideoUpload.ts
frontend/src/lib/: api.ts
frontend/src/lib/supabase/: middleware.ts  server.ts
