[project]
name = "candid-surfer-backend"
version = "0.1.0"
description = "Candid Surfer FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "slowapi>=0.1.9",
    "psycopg[binary]>=3.2",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "boto3>=1.35",
    "stripe>=11",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
